--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             background-color: #fff;
         }
 
+        .active {
+            border: 1px solid black;
+        }
+
         .theme-dark {
             background-color: #000;
             color: #fff;
@@ -66,6 +70,30 @@
             dark gray, with light text.
         </p>
     </div>
+
+    <script>
+        function darkMode() {
+            const dark = document.getElementById("dark");
+            dark.classList.add("active");
+
+            const light = document.getElementById("light");
+            light.classList.remove("active");
+
+            const themedark = document.getElementById("body");
+            themedark.className = "theme-dark";
+        }
+
+        function lightMode() {
+            const light = document.getElementById("light");
+            light.classList.add("active");
+
+            const dark = document.getElementById("dark");
+            dark.classList.remove("active");
+
+            const themelight = document.getElementById("body");
+            themelight.className = "theme-light";
+        }
+    </script>
 </body>
 
 </html>
